Fix assign user to grp + added invite to repo