@@ -6,14 +6,15 @@ import io.swagger.v3.oas.models.info.Contact;
 import io.swagger.v3.oas.models.servers.Server;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-
+import io.swagger.v3.oas.models.tags.Tag;
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
 public class OpenAPIConfig {
 
     @Bean
-    public OpenAPI myOpenAPI() {
+    public OpenAPI customOpenAPI() {
         Server devServer = new Server();
         devServer.setUrl("http://localhost:8083");
         devServer.setDescription("Development server");
@@ -22,14 +23,18 @@ public class OpenAPIConfig {
         contact.setName("CodeSync101");
         contact.setUrl("https://github.com/CodeSync101");
 
-        Info info = new Info()
-                .title("User Service API")
-                .version("1.0")
-                .contact(contact)
-                .description("This API provides endpoints for managing users, organizations, classrooms, and group repositories.");
-
         return new OpenAPI()
-                .info(info)
-                .servers(List.of(devServer));
+                .info(new Info()
+                        .title("User Management Service API")
+                        .version("1.0")
+                        .contact(contact)
+                        .description("API endpoints for managing users, organizations, classrooms, and groups"))
+                .servers(List.of(devServer))
+                .tags(Arrays.asList(
+                        new Tag().name("Users").description("User management operations"),
+                        new Tag().name("Organizations").description("Organization management operations"),
+                        new Tag().name("Classrooms").description("Classroom management operations"),
+                        new Tag().name("Groups").description("Group management operations")
+                ));
     }
 }
